feat: [SSCA-1064]: Add implementation for Remediation APIs (#57135)
* feat: [SSCA-1062]: Add implementation for Listing API of remediation

* fix: [SSCA-1062]: Address comments

* feat: [SSCA-1064]: Add implementation for remediation APIs

* fix tests

* fix codeformat
