# ssca-manager/service/src/main/java/io/harness/ssca/api/RemediationTrackerApiUtils.java
@@ -7,6 +7,7 @@
 
 package io.harness.ssca.api;
 
+import io.harness.ssca.entities.remediation_tracker.ArtifactInfo.ArtifactInfoKeys;
 import io.harness.ssca.entities.remediation_tracker.RemediationTrackerEntity.RemediationTrackerEntityKeys;
 import io.harness.ssca.entities.remediation_tracker.VulnerabilityInfo.VulnerabilityInfoKeys;
 
@@ -22,6 +23,8 @@ public class RemediationTrackerApiUtils {
         return RemediationTrackerEntityKeys.status;
       case "targetDate":
         return RemediationTrackerEntityKeys.targetEndDateEpochDay;
+      case "artifact":
+        return ArtifactInfoKeys.artifactName;
       default:
         log.info(String.format("Mapping not found for field: %s", field));
     }
